fix letter spacing

--- a/css/main.css
+++ b/css/main.css
@@ -25,7 +25,7 @@ body {
     color: #ddd;
     -webkit-font-smoothing: antialiased;
     overflow: hidden;
-    letter-spacing: normal;
+    letter-spacing: 1px;
 }
 
 :root {
